# libhal-soft

./: CMakeLists.txt  MODIFICATIONS  README.md  conanfile.py
.github/workflows/: 3.0.0.yml  4.0.0.yml  ci.yml
demos/: CMakeLists.txt  conanfile.py  hardware_map.hpp  main.cpp
demos/applications/: i2c_bit_bang.cpp
demos/seleae_captures/: 12c_bit_bang_capture.sal
include/libhal-soft/: adc_mux.hpp  i2c_bit_ban_constants.hpp  i2c_bit_bang.hpp  i2c_bit_bang_constants.hpp  i2c_minimum_speed.hpp  inverter.hpp  offset_servo.hpp  rc_servo.hpp
include/libhal-soft/incomplete_drivers/: inert_can.hpp  inert_i2c.hpp  inert_serial.hpp  inert_socket.hpp  inert_spi.hpp  rc_servo.hpp
include/libhal-soft/inert_drivers/: inert_accelerometer.hpp  inert_adc.hpp  inert_can.hpp  inert_dac.hpp  inert_distance_sensor.hpp  inert_gyroscope.hpp  inert_input_pin.hpp  inert_interrupt_pin.hpp  inert_magnetometer.hpp  inert_motor.hpp  inert_output_pin.hpp  inert_pwm.hpp  inert_rotation_sensor.hpp  inert_servo.hpp  inert_steady_clock.hpp  inert_temperature_sensor.hpp  inert_timer.hpp
src/: adc_mux.cpp  i2c_bit_bang.cpp  i2c_minimum_speed.cpp  inverter.cpp  offset_servo.cpp  rc_servo.cpp
src/incomplete_drivers/: inert_can.hpp  inert_i2c.hpp  inert_serial.hpp  inert_socket.hpp  inert_spi.hpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: CMakeLists.txt  adc_mux.test.cpp  conanfile.py  conanfile.txt  i2c_minimum_speed.test.cpp  inert_accelerometer.test.cpp  inert_adc.test.cpp  inert_dac.test.cpp  inert_distance_sensor.test.cpp  inert_gyroscope.test.cpp  inert_input_pin.test.cpp  inert_interrupt_pin.test.cpp  inert_magnetometer.test.cpp  inert_motor.test.cpp  inert_output_pin.test.cpp  inert_pwm.test.cpp  inert_rotation_sensor.test.cpp  inert_serial.test.cpp  inert_socket.test.cpp  inert_steady_clock.test.cpp  inert_temperature_sensor.test.cpp  inert_timer.test.cpp  inverter.test.cpp  main.test.cpp  offset_servo.test.cpp  rc_servo.test.cpp
tests/incomplete_drivers/: inert_can.test.cpp  inert_i2c.test.cpp  inert_serial.test.cpp  inert_socket.test.cpp  inert_spi.test.cpp  rc_servo.test.cpp
tests/inert_drivers/: inert_accelerometer.test.cpp  inert_adc.test.cpp  inert_dac.test.cpp  inert_distance_sensor.test.cpp  inert_gyroscope.test.cpp  inert_input_pin.test.cpp  inert_interrupt_pin.test.cpp  inert_magnetometer.test.cpp  inert_motor.test.cpp  inert_output_pin.test.cpp  inert_pwm.test.cpp  inert_rotation_sensor.test.cpp  inert_servo.test.cpp  inert_steady_clock.test.cpp  inert_temperature_sensor.test.cpp  inert_timer.test.cpp
